--- a/demos/simple/output.html
+++ b/demos/simple/output.html
@@ -14,12 +14,20 @@
     <script src="../../build/js/live-editor.output_pjs.js"></script>
     <!--<script src="../../build/js/live-editor.output_debugger_deps.js"></script>-->
     <script>
-    // TODO(kevinb7) conditionally load output_debugger_deps.js    
+    // TODO(kevinb7) conditionally load output_debugger_deps.js
     var useDebugger = false;
 //    if (location.search.indexOf("debugger=true") !== -1) {
 //        useDebugger = typeof ProcessingDebugger === "function";
 //    }
-    
+
+    const ipcRenderer = parent.require('electron').ipcRenderer;
+    ipcRenderer.on('saveCanvas', (event) => {
+      var canvasBuffer = parent.require('electron-canvas-to-buffer');
+      var canvas = document.getElementById("output-canvas");
+      var buffer = canvasBuffer(canvas, 'image/png');
+      ipcRenderer.send('saveCanvasData', buffer);
+    })
+
     new LiveEditorOutput({
         el: $("#live-editor-output")[0],
         useDebugger: useDebugger
