--- a/demos/simple/index.html
+++ b/demos/simple/index.html
@@ -53,7 +53,7 @@
 //        useDebugger = true;
 //    }
 
-    var code = window.localStorage["test-code"] || "rect(10, 10, 100, 100);";
+    var code = window.localStorage["test-code"] || "";
 
     var search = location.search.substring(1);
     var params = {};
@@ -78,8 +78,8 @@
     window.liveEditor = new LiveEditor({
         el: $("#live-editor"),
         code: code,
-        width: 400,
-        height: 500,
+        width: 500,
+        height: 540,
         editorHeight: "100%",
         autoFocus: true,
         workersDir: "../../build/workers/",
