Added image loading to the editor

--- a/demos/simple/index.html
+++ b/demos/simple/index.html
@@ -41,7 +41,10 @@
 
     <script>
     const ipcRenderer = require('electron').ipcRenderer;
+    const remote = require('electron').remote;
+
     ipcRenderer.on('openFile', (event, data) => {
+      window.liveEditor.imagesDir = remote.getGlobal("filepath");
       window.liveEditor.editor.text(data);
     })
 
@@ -91,6 +94,7 @@
         useDebugger: useDebugger,
         newErrorExperience: true,
     });
+    window.liveEditor.imagesDir = remote.getGlobal("filepath");
     liveEditor.editor.on("change", function() {
         window.localStorage["test-code"] = liveEditor.editor.text();
     });
