--- a/demos/simple/index.html
+++ b/demos/simple/index.html
@@ -46,6 +46,11 @@
     ipcRenderer.on('openFile', (event, data) => {
       window.liveEditor.imagesDir = remote.getGlobal("filepath");
       window.liveEditor.editor.text(data);
+      remote.getGlobal("shared").codeWasChanged = false;
+    })
+
+    ipcRenderer.on('fileSaved', (event) => {
+      remote.getGlobal("shared").codeWasChanged = false;
     })
 
     var outputUrl = "output.html";
@@ -96,6 +101,7 @@
     });
     window.liveEditor.imagesDir = remote.getGlobal("filepath");
     liveEditor.editor.on("change", function() {
+        remote.getGlobal("shared").codeWasChanged = true;
         window.localStorage["test-code"] = liveEditor.editor.text();
     });
     ScratchpadAutosuggest.init(liveEditor.editor.editor);
