Added Refresh Shortcut and moved Restart button to the left

--- a/demos/simple/index.html
+++ b/demos/simple/index.html
@@ -49,6 +49,10 @@
       remote.getGlobal("shared").codeWasChanged = false;
     })
 
+    ipcRenderer.on('refresh', (event) => {
+        window.liveEditor.restartCode();
+    })
+
     ipcRenderer.on('fileSaved', (event) => {
       remote.getGlobal("shared").codeWasChanged = false;
     })
